# SFML-Boilerplate

./: CMakeLists.txt  README.md  imgui.ini
Include/: Animation.hpp  Application.hpp  Category.hpp  Command.hpp  CommandQueue.hpp  Entity.hpp  GameState.hpp  Player.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  SceneNode.hpp  SpriteNode.hpp  State.hpp  StateIdentifiers.hpp  StateStack.hpp  Utility.hpp  Utility.inl  World.hpp
src/: Animation.cpp  Application.cpp  CommandQueue.cpp  Entity.cpp  GameState.cpp  Player.cpp  SceneNode.cpp  SpriteNode.cpp  State.cpp  StateStack.cpp  Utility.cpp  World.cpp  main.cpp
